# mailing_service

./: .gitignore  README.md  pyproject.toml
MailingService/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
MailingService/management/commands/: attempts.py  attemts.py
MailingService/migrations/: 0001_initial.py  0002_mailing_name.py  0003_alter_mailing_created_at_alter_mailing_sent_at.py  0004_alter_mailing_end_send_at.py  0005_client_owner_mailing_owner_massage_owner.py  0006_alter_mailing_options.py  0007_attemts.py  0008_alter_attemts_options.py
MailingService/templates/MailingService/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  header.html  header_mailings.html  header_messages.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailings_list.html  main_page.html  message_confirm_delete.html  message_detail.html  message_form.html  messages_list.html  reports.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_alter_customuser_avatar.py  0003_alter_customuser_avatar.py
users/templates/users/: login.html  manager_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html  reset_password.html  user_detail.html  user_form.html  users_list.html
